[gd_scene load_steps=6 format=1]

[ext_resource path="res://entities/arena/arena.gd" type="Script" id=1]
[ext_resource path="res://entities/arena/enemy_spawner.gd" type="Script" id=2]
[ext_resource path="res://entities/arena/wall.tex" type="Texture" id=3]
[ext_resource path="res://entities/arena/bg.tex" type="Texture" id=4]

[sub_resource type="ConcavePolygonShape2D" id=1]

custom_solver_bias = 0.0
segments = Vector2Array( 0, 0, 100, 0, 100, 100, 0, 100, 0, 0, 0, 100, 100, 0, 100, 100 )

[node name="Arena" type="StaticBody2D" groups=[
"arena",
]]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 3
collision/mask = 3
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Enemies" type="Node" parent="."]

script/script = ExtResource( 2 )

[node name="LeftWall" type="Sprite" parent="."]

texture = ExtResource( 3 )

[node name="RightWall" type="Sprite" parent="."]

texture = ExtResource( 3 )

[node name="TopWall" type="Sprite" parent="."]

transform/rot = 90.0
texture = ExtResource( 3 )

[node name="BottomWall" type="Sprite" parent="."]

transform/rot = 90.0
texture = ExtResource( 3 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
scroll/offset = Vector2( 0, 0 )
scroll/base_offset = Vector2( 0, 0 )
scroll/base_scale = Vector2( 1, 1 )
scroll/limit_begin = Vector2( 0, 0 )
scroll/limit_end = Vector2( 0, 0 )
scroll/ignore_camera_zoom = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

motion/scale = Vector2( 0.5, 0.5 )
motion/offset = Vector2( 0, 0 )
motion/mirroring = Vector2( 0, 0 )

[node name="BG" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]

z/z = -1
texture = ExtResource( 4 )
region = true
region_rect = Rect2( 0, 0, 4000, 4000 )


